fix home spacing

--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -4,7 +4,7 @@
 	display: flex;
 	min-height: var(--no-header-height);
 	overflow: visible;
-	padding-top: 50px;
+	padding-top: 60px;
 
 	@include tabletSmall {
 		overflow: hidden;
@@ -16,19 +16,16 @@
 
 .name-container {
 	align-self: center;
-	margin-bottom: 90px;
+	margin-bottom: 120px;
 	width: 40%;
 
 	@include heightTopMinMax {
-		margin-bottom: 30px;
-	}
-
-	@include tabletBig {
-		margin-bottom: 45px;
+		margin-bottom: 60px;
 	}
 
 	@include tabletSmall {
 		width: 100%;
+		margin-bottom: 45px;
 	}
 
 	// .name-container__title
